[project]
name = "customersupport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-groq>=1.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph-cli[inmem]>=0.4.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "streamlit>=1.52.2",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "ipykernel>=7.1.0",
    "ruff>=0.14.9",
]
